Video accessibility on carmenwiki.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -137,6 +137,14 @@
         Instead, check the code repository
         <a href="https://github.com/codepo8/easy-youtube">easy-youtube on GitHub</a>.
       </li>
+      <li>
+        <a href="https://carmenwiki.osu.edu/display/10292/Quick+Captioning+with+YouTube">Quick Captioning with YouTube</a>
+        (Carmen Wiki, Office of Distance Education and eLearning, Ohio State University).
+      </li>
+      <li>
+        <a href="https://carmenwiki.osu.edu/display/10292/DIY+Captioning+Techniques"><abbr title="Do-it-yourself">DIY</abbr> Captioning Techniques</a>
+        (Carmen Wiki, Office of Distance Education and eLearning, Ohio State University).
+      </li>
       <li><a href="http://nomorecraptions.com/">NoMoreCraptions</a>
         (open-source project that provides an alternative to YouTube's automatic captions,
         which are dubbed &ldquo;craptions&rdquo;).
