Accessibility on Stack Overflow Documentation.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
         <i class="magazine">User Experience</i>, November 2012.
         <!-- @@to PDF -->
       </li>
+      <li>Stack Overflow Documentation: 
+        <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>.
+      </li>
       <!-- 
       <li>
         <a href=""></a>
