Steve Lee: Python Powered Accessibility.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
     <h2>Other</h2>
     <ul>
+      <li><a href="courses.html">(Online) Courses and Accessibility or Disability</a>
+      </li>
       <li><a href="personas.html">Personas</a>.
       </li>
       <li><a href="accessibilityguidelines.html">Accessibility Guidelines</a>.
@@ -96,6 +98,10 @@
       </li>
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>.
+      </li>
+      <li>Lee, Steve: 
+        <a href="https://wiki.gnome.org/Accessibility/PythonPoweredAccessibility">Python Powered Accessibility</a>
+        (originally published in the December 2008 issue of Python Magazine (now defunct)).
       </li>
       <!-- 
       <li>
