--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -17,6 +17,7 @@
     <h2>Navigation</h2>
     <ul>
       <li><a href="index.html">Home</a></li>
+      <li><a href="courses.html">Courses</a></li>
       <li><a href="personas.html">Personas</a></li>
       <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
