--- a/courses.html
+++ b/courses.html
@@ -17,10 +17,11 @@
     <h2>Navigation</h2>
     <ul>
       <li><a href="index.html">Home</a></li>
+      <li class="active"><a href="courses.html">Courses</a></li>
       <li><a href="personas.html">Personas</a></li>
       <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
-      <li class="active"><a href="elearning.html">Accessibility in e-Learning</a></li>
+      <li><a href="elearning.html">Accessibility in e-Learning</a></li>
       <li><a href="contentmanagement.html">Content Management Systems</a></li>
       <li><a href="MobileAccessibilityResources.html">Mobile Accessibility</a></li>
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
