'Design for All' added to site navigation.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <ul>
       <li><a href="courses.html">(Online) Courses and Accessibility or Disability</a>
       </li>
+      <li><a href="designforall.html">Design for All</a></li>
       <li><a href="personas.html">Personas</a>.
       </li>
       <li><a href="accessibilityguidelines.html">Accessibility Guidelines</a>.
