--- a/personas.html
+++ b/personas.html
@@ -18,6 +18,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="courses.html">Courses</a></li>
+      <li><a href="designforall.html">Design for All</a></li>
       <li class="active"><a href="personas.html">Personas</a></li>
       <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
