IDPF: EPUB Accessibility.

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -149,7 +149,7 @@
       </li>
     </ul>
 
-    <h2>Office Documents</h2>
+    <h2>Office Documents and E-Books</h2>
     <ul>
       <li>
         <strong>Accessible Digital Office Document (<abbr>ADOD</abbr>) Project</strong>:
@@ -161,6 +161,10 @@
         how to export documents to &ldquo;tagged&rdquo; <abbr>PDF</abbr>.
         For some of these documents, French and Dutch translations are also
         available.
+      </li>
+      <li><abbr title="International Digital Publishing Forum">IDPF</abbr>:
+        <a href="http://www.idpf.org/epub/a11y/accessibility.html"><abbr>EPUB</abbr> Accessibility 1.0: Conformance and Discovery Requirements for <abbr>EPUB</abbr> Publications</a>:
+        Recommended Specification 5 January 2017.
       </li>
     </ul>
 
