--- a/GUIAccessibilityResources.html
+++ b/GUIAccessibilityResources.html
@@ -58,7 +58,7 @@
         <li>Google:
           <a href="https://github.com/google/access-bridge-explorer">Access Bridge Explorer</a>:
           source code repository (on GitHub) of a Windows application that can be used to examine
-          the accessbility if Java applications that use the
+          the accessbility of Java applications that use the
           <a href="http://docs.oracle.com/javase/accessbridge/2.0.2/introduction.htm">Java Access Bridge</a>.
         </li>
       </ul>
