javax.accessibility in Java SE 7 & 8.

--- a/GUIAccessibilityResources.html
+++ b/GUIAccessibilityResources.html
@@ -40,7 +40,12 @@
     <h2>Java Swing</h2>
       <ul>
         <li>
-          <a href="http://docs.oracle.com/javase/7/docs/api/javax/accessibility/package-summary.html">Package javax.accessibility</a>.
+          <a href="http://docs.oracle.com/javase/8/docs/api/javax/accessibility/package-summary.html">Package javax.accessibility</a>
+          in the Java Platform <abbr>SE</abbr> 8 documentation.
+        </li>
+        <li>
+          <a href="http://docs.oracle.com/javase/7/docs/api/javax/accessibility/package-summary.html">Package javax.accessibility</a>
+          in the Java Platform <abbr>SE</abbr> 7 documentation.
         </li>
         <li>
           <a href="http://www-03.ibm.com/able/guidelines/java/snsjavag.html"><abbr>IBM</abbr> Guidelines for Writing Accessible Applications Using 100% Pure Java™</a> 
