2 papers on web accessibility.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
         <a href="https://wiki.gnome.org/Accessibility/PythonPoweredAccessibility">Python Powered Accessibility</a>
         (originally published in the December 2008 issue of Python Magazine (now defunct)).
       </li>
+      <!-- @@move to web accessibility / research page -->
+      <li>Schmutz, Sven; Sonderegger, Andreas; Sauer, Jürgen: 
+        <a href="http://journals.sagepub.com/doi/abs/10.1177/0018720816640962">Implementing Recommendations From Web Accessibility Guidelines: Would They Also Provide Benefits to Nondisabled Users</a>.
+        <i class="journal">Human Factors: The Journal of the Human Factors and Ergonomics Society</i>, Vol 58, Issue 4 (2016).
+      </li>
+      <li>Aizpurua, Amaia; Harper, Simon; Vigo, Markel: 
+        <a href="http://www.sciencedirect.com/science/article/pii/S1071581916000409">Exploring the Relationship between Web Accessibility and User Experience</a>.
+        <i class="journal">International Journal of Human-Computer Studies</i>, Volume 91 (July 2016): 13–23.
+        <!-- https://www.researchgate.net/publication/300086655_Exploring_the_relationship_between_web_accessibility_and_user_experience -->
+      </li>
       <!-- 
       <li>
         <a href=""></a>
