jQuery UI accessibility.

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -175,6 +175,18 @@
         <br />For example: <a href="http://a11y.nicolas-hoffmann.net/tabs/">jQuery Accessible tab panel system, using <abbr>ARIA</abbr></a>.
         See also the <a href="https://github.com/nico3333fr/jquery-accessible-tabs-aria">source code on GitHub</a>.
       </li>
+      <li>Hans Hillen:
+        <a href="https://hanshillen.github.io/jqtest/">Accessible jQuery-ui Components Demonstration</a>:
+        demos of accessible widgets that were developed within the 
+        <a href="http://www.aegis-project.eu/">AEGIS project</a> (2008&ndash;2012).
+      </li>
+      <li>Bryan Garaventa:
+        <a href="http://www.ssbbartgroup.com/blog/jquery-ui-accessibility-analysis/">jQuery UI Accessibility Analysis</a>,
+        <i class="blog">SSB BART Group blog</i>, 3 July 2013.
+        (Although this review dates from 2013, some of the issues mentioned in it still exist, 
+        for example, the accessibility issues in the datepicker, which are also listed in the
+        <a href="http://wiki.jqueryui.com/w/page/12137778/Datepicker">jQuery wiki</a>.
+      </li>
     </ul>
   </main>
 
