PlayGen: Gamification for Inclusion ...

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -194,6 +194,9 @@
         <a href="http://www.polygon.com/features/2013/8/6/4550490/blind-games-rock-vibe">Blind
         Games: The Next Battleground in Accessibility</a>, Polygon.com, 6 August 2013.
       </li>
+      <li>PlayGen:
+        <a href="http://playgen.com/gamification-inclusion-empowerment/">Gamification for Inclusion and Empowerment</a>.
+      </li>
     </ul>
 
     <h2>Examples of Accessible Games</h2>
