--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
         <i class="journal">International Journal of Human-Computer Studies</i>, Volume 91 (July 2016): 13–23.
         <!-- https://www.researchgate.net/publication/300086655_Exploring_the_relationship_between_web_accessibility_and_user_experience -->
       </li>
+      <li>
+        <a href="https://www.youtube.com/user/3SheetsResearch/videos">3SheetsResearch</a>:
+        videos of usability tests with users under influence. 
+        (Not actually about accessibility.)
+      </li>
       <!-- 
       <li>
         <a href=""></a>
