Atul Varma's Accessible color palette builder.

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -206,8 +206,7 @@
       interpreted as exact renditions of what these people see.
     </p>
     <ul>
-      <li>The <strong><a href="http://www.paciellogroup.com/resources/contrastanalyser/">Colour 
-        Contrast Analyser</a></strong>
+      <li>The <strong><a href="http://www.paciellogroup.com/resources/contrastanalyser/">Colour Contrast Analyser</a></strong>
         is a free and open source tool for Windows and Mac OS X developed by 
         The Paciello Group (<abbr>TPG</abbr>). 
         <br />The tool has two main functions:
@@ -244,8 +243,7 @@
         <q cite="http://www.vischeck.com/" lang="en-US">corrects images for colorblind viewers</q>.
       </li>
       <li>Joe Dolson's 
-        <strong><a href="https://www.joedolson.com/tools/color-contrast-tester.php" lang="en-CA">Color 
-        Contrast Spectrum Tester</a></strong>
+        <strong><a href="https://www.joedolson.com/tools/color-contrast-tester.php" lang="en-CA">Color Contrast Spectrum Tester</a></strong>
         is an online tool that helps you find colours that provide sufficient contrast
         with a colour of your choice. You can choose a colour using a colour picker
         or a hexadecimal code and then let the tool generate a number of colours.
@@ -315,16 +313,21 @@
         <br />The <a href="https://github.com/LeaVerou/contrast-ratio">source code</a> 
         is available on GitHub under the <span lang="en-US"><abbr>MIT</abbr> License</span>.
       </li>
+      <li>
+        <a href="https://toolness.github.io/accessible-color-matrix/ lang="en-US"">Accessible color palette builder</a>:
+        web-based by Atul Varma tool for choosing accessible colour combinations.
+        The tool's source code is available on
+        <a href="https://github.com/toolness/accessible-color-matrix">GitHub</a>.
+      </li>
       <li><a href="http://www.color-blindness.com/coblis-color-blindness-simulator/" lang="en-US">Coblis 
         — Color Blindness Simulator</a> is a colour blindness simulator where you
         can upload images and see what they look like through eight different
         simulations of colour blindness.
       </li>
-      <li><a href="http://registry.gimp.org/node/24885" lang="en-US">Color Vision 
-        Deficiency</a> is a 
+      <li><a href="http://registry.gimp.org/node/24885" lang="en-US">Color Vision Deficiency</a>
+        is a 
         <a href="http://www.gimp.org/"><abbr title="GNU Image Manipulation Program">GIMP</abbr></a> 
-        plugin that simulates different colour vision 
-        deficiencies. 
+        plugin that simulates different colour vision deficiencies. 
       </li>
     </ul>
 
