Browser accessibility features.

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -314,7 +314,7 @@
         is available on GitHub under the <span lang="en-US"><abbr>MIT</abbr> License</span>.
       </li>
       <li>
-        <a href="https://toolness.github.io/accessible-color-matrix/ lang="en-US"">Accessible color palette builder</a>:
+        <a href="https://toolness.github.io/accessible-color-matrix/" lang="en-US">Accessible color palette builder</a>:
         web-based by Atul Varma tool for choosing accessible colour combinations.
         The tool's source code is available on
         <a href="https://github.com/toolness/accessible-color-matrix">GitHub</a>.
@@ -351,8 +351,18 @@
       </li>
     </ul>
 
-    <h2 id="ua_extensionuser">Browser Extensions for End Users</h2>
+    <h2 id="ua_extensionuser">Browser Features Extensions for End Users</h2>
     <ul>
+      <li>Mozilla Support:
+        <a href="https://support.mozilla.org/en-US/kb/accessibility-features-firefox-make-firefox-and-we">Accessibility features in Firefox - Make Firefox and web content work for all users</a>.
+      </li>
+      <li>Media Access Australia:
+        <a href="https://mediaaccess.org.au/web/web-browsers/how-to-turn-on-accessibility-features-in-google-chrome">How to turn on accessibility features in Google Chrome</a>.
+      </li>
+      <li>Media Access Australia:
+        <a href="https://mediaaccess.org.au/web/web-browsers/how-to-turn-on-accessibility-features-in-opera">How to turn on accessibility features in Opera</a>.
+        <!-- @@check whether up to date -->
+      </li>
       <li><a href="http://chronic-illness-support.tumblr.com/post/121510449113/chrome-extensions-for-disabilities-masterpost">chrome extensions for disabilities masterpost</a>
         (June 2015): a list of extensions for people with reading disabilities.
       </li>
