AT for motor impairments.

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -107,6 +107,22 @@
       -->
     </ul>
 
+    <h2>Motor Impairments</h2>
+    <ul>
+      <li>
+        <a href="http://eviacam.sourceforge.net/index.php">eViacam (Enable Viacam)</a>:
+        open source mouse replacement software that allows you to use head movements 
+        as a replacement for mouse movements. The software requires a standard
+        webcam (or other camera) to register head movements.
+        Three versions are available: for Microsoft Windows, <abbr>GNU</abbr>/Linux
+        and Android.
+        (Licence: <abbr>GNU</abbr> General Public License version 3.)
+      </li>
+      <!-- Related projects:
+        * Switch Viacam: "Webcam based switch emulator": http://sviacam.sf.net/ 
+        * SITPLUS: "Ludic-therapeutic activities for people with disabilities": http://sitplus.crea-si.com/ 
+      -->
+    </ul>
   </main>
 
   <footer>
