Intro MOOC on FutureLearn.

--- a/courses.html
+++ b/courses.html
@@ -113,8 +113,8 @@
         <a href="https://www.futurelearn.com/courses/digital-accessibility">Digital Accessibility: Enabling Participation in the Information Society</a>
         is a five-week course created by the <a href="http://gpii.eu/moocap/"><abbr>MOOC</abbr> Accessibility Partnership</a> 
         and that runs on FutureLearn.
-        The first run of the course started on 17 October 2016 and ended on 20 November 2016; 
-        the next run will start on 6 February 2017.
+        The first run of the course started on 17 October 2016 and ended on 20 November 2016. 
+        The second run starts on 6 February 2017.
         <br />The <abbr>MOOC</abbr> Accessibility Partnership (<abbr>MOOCAP</abbr>)
         will provide a number of 
         <a href="http://gpii.eu/moocap/?page_id=655">further courses</a> in 2017.
