Gifford's Oct 2015 article about Drupal 8.

--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -209,6 +209,10 @@
     </p>
     <ul>
       <li>Mike Gifford:
+        <a href="https://openconcept.ca/blog/mike/drupal-8%E2%80%99s-accessibility-advantage-atag-compliance">Drupal 8’s Accessibility Advantage: <abbr>ATAG</abbr> Compliance</a>,
+        <i class="blog">OpenConcept blog</i>, 26.10.2015.
+      </li>
+      <li>Mike Gifford:
         <a href="https://www.youtube.com/watch?v=ecXiRkEvVdQ">Drupal 8: 
         The Leading Example for An Accessible <abbr>CMS</abbr></a>,
         (video with auto-generated captions), Accessibility Camp Ottawa, 
