Usability Partners: Usability & UX.

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
           <a href="http://universaldesign.ie/What-is-Universal-Design/The-7-Principles/">The 7 Principles of Universal Design</a>
           (originally developed at North Carolina State University in the late 1970s).
         </li>
-        <li>
-          <a href=""></a>
+        <li>Usability Partners (Sweden):
+          <a href="http://www.usabilitypartners.se/about-usability/index.php">Usability &amp; <abbr>UX</abbr></a>.
         </li>
         <li>
           <a href=""></a>
