Osmany & Gaunt: Totally Tooling Tips.

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -123,6 +123,21 @@
         <a href="http://phantomjs.org/">PhantomJS</a>.
         (Licence: <a href="https://github.com/nature/pa11y/blob/master/LICENSE.txt"><abbr>GNU</abbr> <abbr title="General Public License">GPL</abbr> 3.0</a>.)
       </li>
+      <li>Addy Osmani and Matt Gaunt:
+        <a href="https://www.youtube.com/watch?v=pBJZsp5LsOE">Totally Tooling Tips: Accessibility</a>:
+        short YouTube video (8 minutes) that introduces a few tools, <abbr>i.e.</abbr> 
+        the <a href="https://chrome.google.com/webstore/detail/accessibility-developer-t/fpkknkljclfencbdbgkenhalefipecmb?hl=en">Chrome Accessibility Developer Tools Extension</a>,
+        the <a href="https://github.com/GoogleChrome/accessibility-developer-tools">Accessibility Developer Tools</a> (a Node module available on GitHub),
+        <a href="https://github.com/addyosmani/a11y">a11y</a> (a module with a command-line interface that can also be used in continuous integration),
+        <a href="https://tenon.io/">Tenon.io</a> (a web-based checker; see the <a href="https://github.com/tenon-io">source code on GitHub</a>),
+        <a href="http://khan.github.io/tota11y/">tota11y</a> (a bookmarklet; see the <a href="https://github.com/Khan/tota11y">source code on GitHub</a>)
+        and
+        <a href="https://allyjs.io/">ally.js</a> (JavaScript library; see the <a href="https://github.com/medialize/ally.js">source code on GitHub</a>.
+        <br />
+        The video is part of the free online course
+        <a href="https://www.udacity.com/course/web-accessibility--ud891">Web Accessibility by Google</a>
+        on Udacity.
+      </li>
     </ul>
 
     <ul>
@@ -331,6 +346,7 @@
       </li>
     </ul>
 
+
     <h2 id="ua_extensiondev">Developing Browser Extensions</h2>
     <ul>
       <li>
@@ -351,7 +367,7 @@
       </li>
     </ul>
 
-    <h2 id="ua_extensionuser">Browser Features Extensions for End Users</h2>
+    <h2 id="ua_extensionuser">Browser Features and Extensions for End Users</h2>
     <ul>
       <li>Mozilla Support:
         <a href="https://support.mozilla.org/en-US/kb/accessibility-features-firefox-make-firefox-and-we">Accessibility features in Firefox - Make Firefox and web content work for all users</a>.
