EASTIN; Dyslexia Help Michigan.

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -37,6 +37,18 @@
   </nav>
 
   <main>
+    <h2>Where to Find Assistive Technologies?</h2>
+    <p>The 
+      <a href="http://www.eastin.eu/en/searches/products/index">European Assistive Technology Information Network (<abbr>EASTIN</abbr>)</a>
+      provides a 
+      <q>European search engine on Assistive Technology, working in all languages of the European Union</q>.
+    </p>
+    <p>The page 
+      <a href="https://wiki.gpii.net/w/ATDatabases"><abbr>AT</abbr>Databases</a>
+      in the <abbr>GPII</abbr> wiki contains a list of databases of assistive technologies.
+      The page was last updated in April 2015.
+    </p>
+
     <h2><abbr>AsTeRICS</abbr></h2>
     <p><a href="http://www.asterics.eu/"><abbr>AsTeRICS</abbr></a> stands for
       &ldquo;Assistive Technology Rapid Integration &amp; Construction Set&rdquo;.
@@ -98,6 +110,9 @@
       <li>Taylor, Julia: 
         <a href="https://www.jisc.ac.uk/blog/how-technology-can-help-dyslexic-learners-help-themselves-05-nov-2015">How technology can help dyslexic learners help themselves</a>,
         <i class="blog"><abbr>JISC</abbr> blog</i>, 05.11.2015. 
+      </li>
+      <li>Dyslexia Help at the University of Michigan: 
+        <a href="http://dyslexiahelp.umich.edu/tools/apps">Apps for Dyslexia and Learning Disabilities</a>.
       </li>
       <!-- @@check https://duckduckgo.com/?q=%22open+source%22+software+dyslexia&ia=web -->
       <!-- 
