Thompson: free YT captioning tools (2009).

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -107,7 +107,7 @@
     <ul>
       <li>Olsson, Nikolaj Lynge (nikse.dk):
         <a href="http://nikse.dk/SubtitleEdit/">Subtitle Edit</a>:
-        open source editor for video subtitles.
+        free and open source editor for video subtitles.
       </li>
       <li>Mikul, Chris:
         <a href="http://www.accessiq.org/create/content/tools-for-captioning-online-videos">Tools for captioning online videos</a>,
@@ -144,6 +144,10 @@
       <li>Robson, Gary:
         <a href="https://www.youtube.com/watch?v=oiZ42KUsxGo">Does closed captioning still serve deaf people?</a>,
         <abbr>TEDx</abbr>Bozeman, May 2014 (10 minutes, YouTube).
+      </li>
+      <li>Thompson, Terrill: 
+        <a href="http://terrillthompson.com/blog/15">Free Tools for Captioning YouTube Videos</a>,
+        02.08.2009.
       </li>
       <li>Clark, Joe:
         <a href="http://joeclark.org/access/captioning/">Captioning</a>
