--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -252,8 +252,11 @@
         <ul>
           <li>
             <!-- <a href="https://drive.google.com/open?id=0B1xSmiMx9252Nm5WTmpjb3ZFX28">Caption it (video in <abbr>MP4</abbr> format)</a> how to add subtitles to a YouTube video. -->
-            <a href="https://vimeo.com/196757789">Caption it (video in <abbr>MP4</abbr> format)</a>
+            <a href="https://vimeo.com/196757789">Caption it (video on Vimeo)</a>
             how to add subtitles to a YouTube video.
+            (The video is also available on 
+            <a href="https://www.youtube.com/watch?v=IrMMP93-6kI">YouTube</a>.)
+            Note that the webcam capture feature shown in the video is no longer available.
           </li>
           <li>
             <a href="https://drive.google.com/open?id=0B1xSmiMx9252QVZPc25lX1RWQk0">Captions in <abbr>SRT</abbr> format</a>.
@@ -275,7 +278,7 @@
       </li>
       <!-- OER on symbols? OER on communication aids? -->
     </ul>
-  
+
     <h3>Enabling People to Work on Computers</h3>
     <ul>
       <li class="DIT UP8" id="fl-step-2-04">Typical Desktop Usage:
