Machine-processable WCAG.

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -149,6 +149,37 @@
       </li>
     </ul>
 
+    <p>Representation of the Web Content Accessibility Guidelines (<abbr>WCAG</abbr>) 2.0
+      in a machine-processable format:
+    </p>
+    <ul>
+      <li>Karl Groves: 
+        <a href="https://github.com/karlgroves/wcag-as-json"><abbr>WCAG</abbr> as <abbr>JSON</abbr></a>
+        (<abbr>MIT</abbr> License).
+      </li>
+      <li>Wilco Fiers: 
+        <a href="https://github.com/WilcoFiers/wcag2json"><abbr>wcag</abbr>2<abbr>json</abbr></a>:
+        <abbr>JSON</abbr> versions of <abbr>WCAG</abbr> in various languages, including
+        English, German, Spanish and Dutch. 
+        (The repository has no licence.)
+      </li>
+      <li>Emerge Interactive:
+        <a href="https://github.com/EmergeInteractive/wuhcag-json/">wuhcag-json</a>:
+        <abbr>YAML</abbr> files for reach individual <abbr>WCAG</abbr> success criterion,
+        and a <abbr>JSON</abbr> version that combines all this information into a single file.
+        (Licence: Creative Commons Attribution-NonCommercial 4.0 International License.)
+      </li>
+      <li>kevee:
+        <a href="https://github.com/kevee/wcag2-yaml-json"><abbr>WCAG</abbr> 2.0 standard in <abbr>YAML</abbr> and <abbr>JSON</abbr> format</a>:
+        this repository contains a <abbr>YAML</abbr> file containing all the success criteria with their associated techniques and failures,
+        and a <abbr>JSON</abbr> file that represents the same data.
+        The repository was last updated in November 2013 and thus represents the 
+        <a href="https://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/">September 2013 version of the <abbr>WCAG</abbr> techniques</a>,
+        which is now out of date.
+        (See the <a href="https://www.w3.org/TR/WCAG20-TECHS/">latest version of Techniques for <abbr>WCAG</abbr> 2.0</a>.)
+      </li>
+    </ul>
+
     <h2>Office Documents and E-Books</h2>
     <ul>
       <li>
