Captioning: tools and articles in separate lists.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -104,6 +104,7 @@
 
     <h2>Audio and Video</h2>
     <h3>Captioning / Subtitles for the Hard of Hearing</h3>
+    <p>Tools for captioning or subtitling:</p>
     <ul>
       <li>Olsson, Nikolaj Lynge (nikse.dk):
         <a href="http://nikse.dk/SubtitleEdit/">Subtitle Edit</a>:
@@ -114,9 +115,6 @@
         <i class="website">Access <abbr>IQ</abbr></i>, 05.10.2012.
         (Covers YouTube, Amara, CaptionTube and dotSUB.)
       </li>
-      <li>University of Washington:
-        <a href="http://www.washington.edu/accessibility/videos/">Creating Accessible Videos</a>.
-      </li>
       <li><a href="http://www.universalsubtitles.org/en/">Amara</a>
         (non-profit project that supports captioning in YouTube and Vimeo).
       </li>
@@ -126,12 +124,47 @@
       <li><a href="http://dotsub.com/">dotSUB</a>
       </li>
       <li>
+        <a href="https://sourceforge.net/projects/stamp-addin/">STAMP: Subtitling Add-In for PowerPoint</a>
+        (free and open source).
+      </li>
+      <li>
+        <a href="https://sourceforge.net/projects/ahdsubtitles/">AHD Subtitles Maker Professional</a>:
+        free and open source tool (<abbr>GPL</abbr> 3 licence).
+      </li>
+      <li>
+        <a href="https://sourceforge.net/projects/subworkshop/">Subtitle Workshop</a>:
+        free and open source tool (<abbr>GPL</abbr> 3 licence).
+      </li>
+      <li>
+        <a href="http://otsaloma.io/gaupol/">gaupol</a>:
+        cross-platform free and open source tool.
+      </li>
+      <li>
+        <a href="http://gnome-subtitles.sourceforge.net/">GNOME Subtitles</a>:
+        free and open source tool for <abbr>GNU</abbr>/Linux.
+      </li>
+    </ul>
+
+    <p>Tutorials and articles:</p>
+    <ul>
+      <li>University of Washington:
+        <a href="http://www.washington.edu/accessibility/videos/">Creating Accessible Videos</a>.
+      </li>
+      <li>
         <a href="https://carmenwiki.osu.edu/display/10292/Quick+Captioning+with+YouTube">Quick Captioning with YouTube</a>
         (Carmen Wiki, Office of Distance Education and eLearning, Ohio State University).
       </li>
       <li>
         <a href="https://carmenwiki.osu.edu/display/10292/DIY+Captioning+Techniques"><abbr title="Do-it-yourself">DIY</abbr> Captioning Techniques</a>
         (Carmen Wiki, Office of Distance Education and eLearning, Ohio State University).
+      </li>
+      <li>3PlayMedia:
+        <a href="http://www.3playmedia.com/how-it-works/how-to-guides/captions-powerpoint/">Captions and Subtitles in PowerPoint</a>:
+        tutorial for adding captions or subtitles to videos in PowerPoint 2013 or Office 365 using <strong>Office Mix</strong>.
+      </li>
+      <li>TechSmith: 
+        <a href="https://www.techsmith.com/tutorial-camtasia-8-add-captions-manually.html">Add Captions Manually - Camtasia Version 8</a>.
+        (See also this <a href="https://www.youtube.com/watch?v=KnC_I3-TbMk">video tutorial on YouTube</a>.)
       </li>
       <li><a href="http://nomorecraptions.com/">NoMoreCraptions</a>
         (open-source project that provides an alternative to YouTube's automatic captions,
