Able to Include Java accessibility layer.

--- a/GUIAccessibilityResources.html
+++ b/GUIAccessibilityResources.html
@@ -37,7 +37,8 @@
   </nav>
 
   <main>
-    <h2>Java Swing</h2>
+    <h2>Java</h2>
+    <h3>Java Swing</h3>
     <ul>
       <li>
         <a href="http://docs.oracle.com/javase/8/docs/api/javax/accessibility/package-summary.html">Package javax.accessibility</a>
@@ -68,7 +69,7 @@
       </li>
     </ul>
 
-    <h2>JavaFX</h2>
+    <h3>JavaFX</h3>
     <ul>
       <li>
         <a href="https://wiki.openjdk.java.net/display/OpenJFX/Accessibility+Exploration">Accessibility Exploration</a>.
@@ -77,6 +78,20 @@
         <a href="https://wiki.openjdk.java.net/display/OpenJFX/Keyboard+Navigation">Keyboard Navigation</a>.
       </li>
     </ul>
+
+    <h3>Java: Other</h3>
+    <p>The <a href="https://github.com/able-to-include/accessibility-layer-sdk-java">Able to Include Accessibility Layer</a>
+      for Java is available under the Apache License, Version 2.0 and
+      enables applications to work wit the 
+      <a href="https://github.com/able-to-include/accessibility-layer">Able to Include context-aware accessibility layer</a>,
+      which was developed to
+      <q cite="https://github.com/able-to-include/accessibility-layer">improve the day-to-day life of people with IDD by understanding their surroundings and helping them to interact with the information society</q>.
+      <br />See also the 
+      <a href="http://al.abletoinclude.eu/doc/">Accessibility Layer <abbr>API</abbr> documentation</a>.
+      These tools were developed by the 
+      <strong><a href="http://cordis.europa.eu/project/rcn/191830_en.html">Able to Include</a></strong> project,
+      which ran from March 2014 till February 2017.
+    </p>
 
     <h2>Qt</h2>
     <ul>
