Browser-based tools.

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -187,6 +187,11 @@
       <!--li><a href=""></a>
       </li-->
     </ul>
+    <!-- See also articles:
+      * Karl Groves: "Choosing an Automated Accessibility Testing Tool: 13 Questions you should ask", 28.06.2013: http://www.karlgroves.com/2013/06/28/choosing-an-automated-accessibility-testing-tool-13-questions-you-should-ask/ 
+      * Michael Gower: "IBM Updates Accessibility Checklists in Preparation for Section 508 Refresh", 19.09.2016: http://ageandability.com/2016/09/19/ibm-updates-accessibility-checklists-in-preparation-for-section-508-refresh/ 
+      * Maureen Kraft: "Open Source Accessibility Tools Help Streamline Inclusive Development", 14.02.2017: http://ageandability.com/2017/02/14/open-source-accessibility-tools-help-streamline-inclusive-development/ 
+    -->
 
     <h3 id="contrastcheck">Contrast Checkers</h3>
     <p>Whether foreground and background colous have sufficient contrast is not 
@@ -367,6 +372,28 @@
       </li>
     </ul>
 
+    <h2>Various Browser-Based Tools</h2>
+    <p>Stylesheets, bookmarklets and other scripts for visualising specific markup features.</p>
+    <ul>
+      <li>Wilco Fiers: 
+        <a href="https://github.com/WilcoFiers/TableManners">Table Manners</a>:
+        jQuery plugin to visualize accessibility of tables 
+        (last updated in 2013; no licence).
+      </li>
+      <li>Jens Meiert: 
+        <a href="https://github.com/j9t/qa-style-sheet"><abbr>QA</abbr> Style Sheet</a>:
+        <abbr>CSS</abbr> file that highlights common <abbr>HTML</abbr> problems;
+        not primarly geared towards accessibility evaluation.
+        (Licence: Apache 2.0).
+      </li>
+      <!-- 
+      <li>
+        <a href=""></a>
+      </li>
+      -->
+    </ul>
+
+
     <h2 id="ua_extensionuser">Browser Features and Extensions for End Users</h2>
     <ul>
       <li>Mozilla Support:
@@ -389,6 +416,14 @@
     * https://github.com/validator/validator 
     * https://github.com/unsoup/validator 
     * https://netbeans.org/kb/docs/webclient/html5-gettingstarted.html 
+  -->
+  <!-- Tools for web developers: 
+    * yatil / Eric Eggert: accessifyhtml5.js, polyfill for a more accessible HTML5: https://github.com/yatil/accessifyhtml5.js
+      Last updated in 2015.
+  -->
+  <!-- 
+    * The A11Y Project: "A community-driven effort to make web accessibility easier.": http://a11yproject.com/
+      See also the GitHub repository: https://github.com/a11yproject/a11yproject.com. 
   -->
   </main>
 
