Web Experience Toolkit (WET).

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -2,7 +2,7 @@
 <html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>Web Application Accessibility Resources</title>
+  <title>Web Application Accessibility Resources | Accessibility Resources</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
@@ -171,7 +171,8 @@
       
     -->
 
-    <h2>Examples (Widgets, etc.)</h2>
+    <h2>Accessible User Interface Components or Widgets</h2>
+    <h3>Examples (Widgets, etc.)</h3>
     <ul>
       <li>OpenAjax Alliance:
         <a href="http://www.oaa-accessibility.org/examples/">OpenAjax Examples</a>.
@@ -197,6 +198,28 @@
         further information about the framework.
       </li>
     </ul>
+
+    <h3>Web Experience Toolkit (<abbr>WET</abbr>)</h3>
+    <p>The Web Experience Toolkit is 
+      <q cite="http://wet-boew.github.io/wet-boew/index-en.html">front-end framework for building websites that are accessible, usable, interoperable, mobile friendly and multilingual</q>.
+      The source code is being developed and maintained as part of an open source project led by the Government of Canada.
+      See the 
+      <a href="http://wet-boew.github.io/wet-boew/index-en.html">project website</a>
+      and the
+      <strong><a href="https://github.com/wet-boew/wet-boew"><abbr>WET</abbr> source code on GitHub</a></strong>.
+      The toolkit is available under the 
+      <a href="https://github.com/wet-boew/wet-boew/blob/master/License-en.txt" lang="en-US"><abbr>MIT</abbr> License</a>.
+      The project has a
+      <a href="http://wet-boew.github.io/wet-boew-styleguide/v4/index-en.html">style guide</a>.
+      The toolkit also has a few variants:
+      a <a href="https://github.com/wet-boew/wet-boew-drupal">Drupal variant</a>,
+      a <a href="https://github.com/wet-boew/wet-boew-drupal8">Drupal 8 variant</a>,
+      a <a href="https://github.com/wet-boew/wet-boew-sharepoint">SharePoint variant</a>, 
+      a <a href="https://github.com/wet-boew/wet-boew-php"><abbr>PHP</abbr> variant</a>,
+      a <a href="https://github.com/wet-boew/wet-boew-dotnet"><abbr title="dot Net">.NET</abbr> variant</a>,
+      a <a href="https://github.com/wet-boew/wet-boew-dotnetnuke">DotNetNuke variant</a> (last updated in February 2015), and
+      a <a href="https://github.com/wet-boew/wet-boew-java-maven">Java and Maven variant</a> (work in progress).
+    </p>
 
     <h3>jQuery <abbr>UI</abbr></h3>
     <ul>
